grammar.js
    source_file: $ => repeat($._declaration),

    _declaration: $ => choice(
      $.variable_declaration,
      $.function_declaration,
      $.enum_declaration,
    ),


    _expression: $ => choice(
      $._atomic_expression,
      $.generic_expression,
      $.unary_expression,
      $.binary_expression,
      $.postfix_expression,
      $.control_transfer_statement,
    ),


    control_transfer_statement: ($) =>
      choice(
        // prec.right(PRECS.control_transfer, $._throw_statement),
        prec.right(
          PRECS.control_transfer,
          seq(
            $._optionally_valueful_control_keyword,
            field("result", optional($._expression))
          )
        )
      ),

    _optionally_valueful_control_keyword: ($) =>
      choice("return", "continue", "break", "yield"),


    enum_body: $ => seq(
      '{',
      optional('|'),
      optional($._enum_case_list),
      repeat($._declaration),
      '}'
    ),

    generic_parameter_clause: $ => prec(1, seq(
      '<',
      sep1(',', $.identifier),
      '>'
    )),
    _enum_case_list: $ => seq(
      $.enum_case,
      repeat(seq('|', $.enum_case))
    ),

    enum_declaration: $ => seq(
      optional('public'),
      'enum',
      field('name', $.identifier),
      optional(field('generic_parameters', $.generic_parameter_clause)),
      optional(field('inheritance', $.type_inheritance_clause)),
      field('body', $.enum_body)
    ),

    enum_case: $ => seq(
      field('name', $.identifier),
      optional(field('parameters', $.enum_case_parameters))
    ),

    enum_case_parameters: $ => alias($.parameter_types, $.enum_case_parameter_list),


    postfix_expression: $ => prec(PRECS.postfix_operations, choice(
      seq(
        field('function', $._expression),
        field('arguments', $.argument_list)
      ),
      // 索引访问
      seq(
        field('array', $._expression),
        '[',
        sep(',', $._expression),
        ']'
      ),
      // 成员访问
      seq(
        field('object', $._expression),
        '.',
        field('property', $.identifier)
      )
    )),

    argument_list: $ => seq(
      '(',
      sep(',', $._expression),
      ')'
    ),

    tuple_expression: $ => prec(0, seq(
      '(',
      $._expression,
      ',',
      sep(',', $._expression),
      ')'
    )),

    unary_expression: $ => prec.right(12, seq(
      choice('!', '-'),
      $._expression
    )),


    // 二元表达式
    binary_expression: ($) =>
      choice(
        $.multiplicative_expression,
        $.additive_expression,
        $.range_expression,
        $.infix_expression,
        $.nil_coalescing_expression,
        $.check_expression,
        $.equality_expression,
        $.comparison_expression,
        $.conjunction_expression,
        $.disjunction_expression,
        $.bitwise_operation
      ),



    additive_expression: ($) =>
      prec.left(
        PRECS.addition,
        seq(
          field("lhs", $._expression),
          field("op", $._additive_operator),
          field("rhs", $._expression)
        )
      ),
    _pattern: $ => choice(
      $.identifier,
      $.tuple_pattern,
    ),

    variable_declaration: $ => seq(
      choice('let', 'var', 'const'),
      field('name', $._pattern),
      optional(field('type', $.type_annotation)),
      optional(field('value', $.initializer)),
      optional(';')
    ),

    initializer: $ => seq('=', $._expression),


    type_annotation: $ => seq(':', $._type),


    _type: $ => choice(
      $.primitive_type,
      $.function_type,
      $.generic_type,
      $.tuple_type,
      $.scoped_type_identifier,
      $.identifier,
    ),

    primitive_type: $ => choice(
      'Bool', 'Rune', 'String', 'Unit', 'Nothing', 'This',
      'Int8', 'Int16', 'Int32', 'Int64', 'IntNative',
      'UInt8', 'UInt16', 'UInt32', 'UInt64', 'UIntNative',
      'Float16', 'Float32', 'Float64'
    ),


    // 元组类型 (规约 2.1.7)
    tuple_pattern: $ => seq(
      '(',
      sep1(',', $._pattern),
      ')'
    ),

    // 函数类型 (规约 2.1.9)
    function_type: $ => seq(
      field('parameters', $.parameter_types),
      '->',
      field('return_type', $._type)
    ),

    parameter_declaration: $ => seq(
      field('name', $._pattern),
      ':',
      field('type', $._type)
    ),
    parameter_types: $ => seq(
      '(',
      sep(',', $._type),
      ')'
    ),

    function_declaration: $ => seq(
      // TODO: 添加修饰符，如 'public', 'static' 等
      'func',
      field('name', $.identifier),
      // TODO: 添加泛型参数 <T>
      field('parameters', $.parameter_list),
      optional(field('return_type', $.type_annotation)),
      // TODO: 添加 where 约束
      field('body', $.block)
    ),

    parameter_list: $ => seq(
      '(',
      sep(',', $.parameter_declaration),
      ')'
    ),
    block: $ => seq(
      '{',
      repeat(choice(
        $._declaration,
        $._expression_statement
      )),
      '}'
    ),

    _expression_statement: $ => seq(
      $._expression,
      optional(';')
    ),


    // --- 词法规则 (Tokens) ---

    identifier: ($) =>
      choice(
        LEXICAL_IDENTIFIER,
        /`[^\r\n` ]*`/,       // leave checking work for compiler  
        /\$[0-9]+/,
      ),

    integer_literal: ($) => token(seq(optional(/[1-9]/), DEC_DIGITS)),
    line_string_literal: ($) =>
      seq(
        '"',
        repeat(choice(field("text", $._line_string_content), $._interpolation)),
        '"'
      ),
    _line_string_content: ($) => choice($.line_str_text, $.str_escaped_char),
    line_str_text: ($) => /[^\\"]+/,
    _interpolation: ($) => seq("\\(", $._interpolation_contents, ")"),
    _additive_operator: ($) =>
      choice(
        alias($._plus_then_ws, "+"),
        alias($._minus_then_ws, "-"),
        "+",
        "-"
      ),
